--- a/page/package.json
+++ b/page/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "axios": "^1.3.6",
     "next": "13.3.0",
     "react": "18.2.0",
