--- a/page/package.json
+++ b/page/package.json
@@ -10,10 +10,19 @@
   },
   "dependencies": {
     "@formspree/react": "^2.4.1",
+    "@nextui-org/react": "^2.1.13",
+    "@nextui-org/system": "^2.0.10",
+    "@nextui-org/theme": "^2.1.9",
     "axios": "^1.3.6",
-    "next": "13.3.0",
+    "framer-motion": "^10.16.4",
+    "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
