--- a/page/package.json
+++ b/page/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
     "@nextui-org/theme": "^2.1.9",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.3.6",
     "framer-motion": "^10.16.4",
     "next": "13.4.7",
