--- a/page/package.json
+++ b/page/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@formspree/react": "^2.4.1",
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
     "@nextui-org/theme": "^2.1.9",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.3.6",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.16.12",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
