--- a/page/package.json
+++ b/page/package.json
@@ -22,7 +22,8 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "yet-another-react-lightbox": "^3.15.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
